# py-init

./: .gitignore  setup.cfg  test.sh
.github/workflows/: deploy-package.yml  python-package.yml  test-package.yml
pyinit/: __main__.py  templates.py
tests/unit/: test_io.py
