[metadata]
name = pyinit
author = Benjamin McMaster
author_email = benjamin.mcmaster@alumni.ubc.ca
description = Initialize blank python package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 

[options.entry_points]
console_scripts =

[options.extras_require]
develop =
    nose
    nose-cov
    flake8

[nosetests]
with-coverage = True
cover-package = pyinit
cover-erase = True
tests = tests/unit
with-doctest = True

[coverage:run]
branch = True

[coverage:report]
ignore_errors = True

[flake8]
